* Added and implemented command grouping

* Improved help command

* Improved mute commands

* Improved configs

* Combined 'muteinfo' and 'mutelist' commands to mute command

* Improved mute systems

* Added member update event

12/23/2019 (UTC+7)