@@ -31,7 +31,7 @@ module.exports = {
         const embed = new Discord.RichEmbed();
 
         // checks for the permission
-        if (!member.hasPermission('MUTE_MEMBERS') || message.author.id !== '217970261230747648') {
+        if (!member.hasPermission('MUTE_MEMBERS')) {
             embed.setDescription("You don't have the permission to do this fam!")
                 .setColor('#ff0000')
                 .setFooter('Executed by ' + message.author.username, message.author.displayAvatarURL);
@@ -270,6 +270,22 @@ module.exports = {
             }
 
             channel.send(embed);
+
+            const logsEmbed = new Discord.RichEmbed()
+                .setAuthor('Mute')
+                .setColor('#ff8000')
+                .setDescription(
+                    '**Muted user**: ' + target.user.tag
+                    + '\n**Muted by**: ' + member.user.tag
+                    + '\n'
+                    + '\n**Reason**: ' + reason
+                    + '\n**Duration**: ' + (permMute ? 'permanent' : duration['num'] + ' ' + duration['type'] + (duration['num'] > 1 ? 's' : 's'))
+                    + '\n'
+                    + '\n**Time**: ' + moment(startTime + moment.duration(7, 'h').as('ms')).format('YYYY/MM/DD - HH:mm:ss') + ' (UTC+7)'
+                    + '\n**Channel**: ' + channel.name
+                );
+
+            Main.logMuteHistory(logsEmbed);
         }
     }
 
